--- a/src/styles/ContactUs.css
+++ b/src/styles/ContactUs.css
@@ -272,6 +272,7 @@ button img {
 
 }
 
+
 @media only screen and (max-width: 450px) {
     .us {
         width: 100%;
@@ -292,13 +293,6 @@ button img {
         padding-left: 10px;
     }
     
-    .us2 {
-        width: 100%;
-        margin-left: 0px;
-        margin-top: 30px;
-        
-    }
-    
     
     .need p {
         font-size: 15px;
@@ -306,7 +300,17 @@ button img {
     }
 }
 
-@media only screen and (max-width: 345px) {
+@media only screen and (max-width: 431px) {
+    .us {
+        width: 100%;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        margin-top: 50px;
+    
+    }
     
     .us1 {
         width: 100%;
@@ -317,34 +321,58 @@ button img {
     }
     
     .us2 {
-        width: 100%;
+        width: 80%;
         margin-left: 0px;
         margin-top: 30px;
         
     }
 
-    .need p {
+    .us2a {
+        width: 100%;
+       display: flex;
+       flex-direction: column;
         
-        font-size: 13px;
+    }
+    
+    
+    .need p {
+        font-size: 15px;
+        
     }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 346px) {
     
-    .us1 {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 50px;
-        padding-left: 0px;
+        
+        .us2 {
+            width: 70%;
+            margin-left: 0px;
+            margin-top: 30px;
+            
+        }
     }
+
+@media only screen and (max-width: 323px) {
     
     .us2 {
-        width: 100%;
-        margin-left: 0px;
-        margin-top: 30px;
+       width: 50%;
+       margin-left: -10px;
+    }
+
+    .us2a input {
+        
+        height: 35px;
+        width: 200px;
         
     }
+
+    .subject5, .help5 {
+        
+        height: 35px;
+        width: 200px;
+        
+    }
+
     .need p {
         font-size: 11px;
     }
@@ -352,20 +380,25 @@ button img {
 
 @media only screen and (max-width: 307px) {
     
-    .us1 {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 50px;
-        padding-left: 0px;
-    }
-    
     .us2 {
-        width: 100%;
-        margin-left: 0px;
-        margin-top: 30px;
-        
-    }
+        width: 50%;
+        margin-left: -10px;
+     }
+ 
+     .us2a input {
+         
+         height: 35px;
+         width: 190px;
+         
+     }
+ 
+     .subject5, .help5 {
+         
+         height: 35px;
+         width: 200px;
+         
+     }
+ 
     .need .ned {
         font-size: 16px;
     }
@@ -378,22 +411,27 @@ button img {
     }
 }
 
-@media only screen and (max-width: 271px) {
-    
-    .us1 {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 50px;
-        padding-left: 0px;
-    }
+@media only screen and (max-width: 272px) {
     
     .us2 {
-        width: 100%;
-        margin-left: 0px;
-        margin-top: 10px;
-        
-    }
+        width: 50%;
+        margin-left: -10px;
+     }
+ 
+     .us2a input {
+         
+         height: 35px;
+         width: 180px;
+         
+     }
+ 
+     .subject5, .help5 {
+         
+         height: 35px;
+         width: 180px;
+         
+     }
+ 
 
     .need {
         
@@ -412,22 +450,30 @@ button img {
     }
 }
 
-@media only screen and (max-width: 250px) {
-    
-    .us1 {
-        width: 90%;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 50px;
-       margin-left: -10px;
+@media only screen and (max-width: 263px) {
+    .us1a {
+       width: 170px;
     }
     
     .us2 {
-        width: 90%;
-        margin-left: 0px;
-        margin-top: 10px;
-        
-    }
+        width: 50%;
+        margin-left: 10px;
+     }
+ 
+     .us2a input {
+         
+         height: 35px;
+         width: 170px;
+         
+     }
+ 
+     .subject5, .help5 {
+         
+         height: 35px;
+         width: 170px;
+         
+     }
+ 
 
     .need {
         
@@ -442,7 +488,7 @@ button img {
     }
 
     .verto {
-        margin-left: 10px;
+        margin-left: 7px;
         
     }
 
